Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -977,8 +977,8 @@
   "pli-tv-kd13:24.1.6": "and got it. ",
   "pli-tv-kd13:24.1.7": "While on probation, he was overcome with guilt. ",
   "pli-tv-kd13:24.1.8": "He considered all this ",
-  "pli-tv-kd13:24.1.15": "and then thought, ‘Let me ask the Sangha for probation for an additional month for those two offenses.’ ",
-  "pli-tv-kd13:24.2.1": "He told the monks about everything, ",
+  "pli-tv-kd13:24.1.15": "and thought, ‘Let me ask the Sangha for probation for an additional month for those two offenses.’ ",
+  "pli-tv-kd13:24.2.1": "He told the monks everything, ",
   "pli-tv-kd13:24.2.17": "adding, ‘What should I do now?’ ",
   "pli-tv-kd13:24.2.18": "They told the Buddha. ",
   "pli-tv-kd13:24.3.1": "“Well then, the Sangha should give that monk probation for an additional month for those two offenses concealed for two months. ",
