--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -990,8 +990,8 @@
   "pli-tv-kd13:24.3.7": "‘I’ve committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:24.3.8": "Let me ask the Sangha for probation for one month for those offenses.’ ",
   "pli-tv-kd13:24.3.9": "I asked ",
-  "pli-tv-kd13:24.3.10": "and the Sangha gave me that probation. ",
-  "pli-tv-kd13:24.3.11": "While on probation, I was conscience-stricken. ",
+  "pli-tv-kd13:24.3.10": "and got it. ",
+  "pli-tv-kd13:24.3.11": "While on probation, I was overcome with guilt. ",
   "pli-tv-kd13:24.3.12": "I considered all this, ",
   "pli-tv-kd13:24.3.19": "and then thought, ‘Let me ask the Sangha for probation for an additional month for those two offenses.’ ",
   "pli-tv-kd13:24.3.20": "I now ask the Sangha for probation for an additional month for those two offenses.’ ",
