--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1003,7 +1003,7 @@
   "pli-tv-kd13:24.3.26": "He thought, ",
   "pli-tv-kd13:24.3.27": "‘I’ve committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:24.3.28": "Let me ask the Sangha for probation for one month for those offenses.’ ",
-  "pli-tv-kd13:24.3.29": "He did, ",
+  "pli-tv-kd13:24.3.29": "He asked ",
   "pli-tv-kd13:24.3.30": "and the Sangha gave him that probation. ",
   "pli-tv-kd13:24.3.31": "While on probation, he was conscience-stricken. ",
   "pli-tv-kd13:24.3.32": "He considered all this, ",
