--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1006,7 +1006,7 @@
   "pli-tv-kd13:24.3.29": "He asked ",
   "pli-tv-kd13:24.3.30": "and got it. ",
   "pli-tv-kd13:24.3.31": "While on probation, he was overcome with guilt. ",
-  "pli-tv-kd13:24.3.32": "He considered all this, ",
+  "pli-tv-kd13:24.3.32": "He considered all this ",
   "pli-tv-kd13:24.3.39": "and then thought, ‘Let me ask the Sangha for probation for an additional month for those two offenses.’ ",
   "pli-tv-kd13:24.3.40": "He’s now asking the Sangha for probation for an additional month for those two offenses. ",
   "pli-tv-kd13:24.3.41": "If it seems appropriate to the Sangha, the Sangha should give him that probation. ",
