Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1007,14 +1007,14 @@
   "pli-tv-kd13:24.3.30": "and got it. ",
   "pli-tv-kd13:24.3.31": "While on probation, he was overcome with guilt. ",
   "pli-tv-kd13:24.3.32": "He considered all this ",
-  "pli-tv-kd13:24.3.39": "and then thought, ‘Let me ask the Sangha for probation for an additional month for those two offenses.’ ",
+  "pli-tv-kd13:24.3.39": "and thought, ‘Let me ask the Sangha for probation for an additional month for those two offenses.’ ",
   "pli-tv-kd13:24.3.40": "He’s now asking the Sangha for probation for an additional month for those two offenses. ",
   "pli-tv-kd13:24.3.41": "If it seems appropriate to the Sangha, the Sangha should give him that probation. ",
   "pli-tv-kd13:24.3.42": "This is the motion. ",
   "pli-tv-kd13:24.3.43": "Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd13:24.3.44": "The monk so-and-so had committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:24.3.45": "He thought, ",
-  "pli-tv-kd13:24.3.46": "I’ve committed two offenses entailing suspension, both concealed for two months. ",
+  "pli-tv-kd13:24.3.46": "‘I’ve committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:24.3.47": "Let me ask the Sangha for probation for one month for those offenses.’ ",
   "pli-tv-kd13:24.3.48": "He did, ",
   "pli-tv-kd13:24.3.49": "and the Sangha gave him that probation. ",
