Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1018,7 +1018,7 @@
   "pli-tv-kd13:24.3.47": "Let me ask the Sangha for probation for one month for those offenses.’ ",
   "pli-tv-kd13:24.3.48": "He asked ",
   "pli-tv-kd13:24.3.49": "and got it. ",
-  "pli-tv-kd13:24.3.50": "While on probation, he was conscience-stricken. ",
+  "pli-tv-kd13:24.3.50": "While on probation, he was overcome with guilt. ",
   "pli-tv-kd13:24.3.51": "He considered all this, ",
   "pli-tv-kd13:24.3.58": "and then thought, ‘Let me ask the Sangha for probation for an additional month for those two offenses.’ ",
   "pli-tv-kd13:24.3.59": "He’s now asking the Sangha for probation for an additional month for those two offenses. ",
