--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1020,7 +1020,7 @@
   "pli-tv-kd13:24.3.49": "and got it. ",
   "pli-tv-kd13:24.3.50": "While on probation, he was overcome with guilt. ",
   "pli-tv-kd13:24.3.51": "He considered all this ",
-  "pli-tv-kd13:24.3.58": "and then thought, ‘Let me ask the Sangha for probation for an additional month for those two offenses.’ ",
+  "pli-tv-kd13:24.3.58": "and thought, ‘Let me ask the Sangha for probation for an additional month for those two offenses.’ ",
   "pli-tv-kd13:24.3.59": "He’s now asking the Sangha for probation for an additional month for those two offenses. ",
   "pli-tv-kd13:24.3.60": "The Sangha gives him that probation. ",
   "pli-tv-kd13:24.3.61": "Any monk who approves of giving him that probation should remain silent. ",
@@ -1034,8 +1034,8 @@
   "pli-tv-kd13:25.1.2": "He thinks, ",
   "pli-tv-kd13:25.1.3": "‘I’ve committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:25.1.4": "Let me ask the Sangha for probation for one month for those offenses.’ ",
-  "pli-tv-kd13:25.1.5": "He does, ",
-  "pli-tv-kd13:25.1.6": "and the Sangha gives him that probation. ",
+  "pli-tv-kd13:25.1.5": "He asks ",
+  "pli-tv-kd13:25.1.6": "and gets it. ",
   "pli-tv-kd13:25.1.7": "While on probation, he’s conscience-stricken. ",
   "pli-tv-kd13:25.1.8": "He considers all this ",
   "pli-tv-kd13:25.1.15": "and thinks, ‘Let me ask the Sangha for probation for an additional month for those two offenses.’ ",
