--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1039,8 +1039,8 @@
   "pli-tv-kd13:25.1.7": "While on probation, he’s overcome with guilt. ",
   "pli-tv-kd13:25.1.8": "He considers all this ",
   "pli-tv-kd13:25.1.15": "and thinks, ‘Let me ask the Sangha for probation for an additional month for those two offenses.’ ",
-  "pli-tv-kd13:25.1.16": "He then asks the Sangha, ",
-  "pli-tv-kd13:25.1.17": "and the Sangha gives him probation for an additional month. ",
+  "pli-tv-kd13:25.1.16": "He asks ",
+  "pli-tv-kd13:25.1.17": "and gets it. ",
   "pli-tv-kd13:25.1.18": "Counting the previous month, that monk must stay on probation for two months. ",
   "pli-tv-kd13:25.2.1": "It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:25.2.2": "He knows about one month, but doesn’t know about the other. ",
