Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1043,9 +1043,9 @@
   "pli-tv-kd13:25.1.17": "and gets it. ",
   "pli-tv-kd13:25.1.18": "Counting the previous month, that monk must stay on probation for two months. ",
   "pli-tv-kd13:25.2.1": "It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
-  "pli-tv-kd13:25.2.2": "He knows about one month, but doesn’t know about the other. ",
-  "pli-tv-kd13:25.2.3": "He asks the Sangha for one month probation for the month he knows about, ",
-  "pli-tv-kd13:25.2.4": "and the Sangha gives him that probation. ",
+  "pli-tv-kd13:25.2.2": "He’s aware of one month, but not the other. ",
+  "pli-tv-kd13:25.2.3": "He asks the Sangha for one month probation for the month he’s aware of, ",
+  "pli-tv-kd13:25.2.4": "which he gets. ",
   "pli-tv-kd13:25.2.5": "While on probation, he finds out about the other month. ",
   "pli-tv-kd13:25.2.6": "He considers all of this ",
   "pli-tv-kd13:25.2.12": "and thinks, ‘Let me ask the Sangha for probation for an additional month for those two offenses.’ ",
