--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1049,7 +1049,7 @@
   "pli-tv-kd13:25.2.5": "While on probation, he finds out about the other month. ",
   "pli-tv-kd13:25.2.6": "He considers all of this ",
   "pli-tv-kd13:25.2.12": "and thinks, ‘Let me ask the Sangha for probation for an additional month for those two offenses.’ ",
-  "pli-tv-kd13:25.2.13": "He then asks the Sangha, ",
+  "pli-tv-kd13:25.2.13": "He asks ",
   "pli-tv-kd13:25.2.14": "and the Sangha gives him probation for an additional month. ",
   "pli-tv-kd13:25.2.15": "Counting the previous month, that monk must stay on probation for two months. ",
   "pli-tv-kd13:25.2.16": "It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
