Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1050,12 +1050,12 @@
   "pli-tv-kd13:25.2.6": "He considers all of this ",
   "pli-tv-kd13:25.2.12": "and thinks, ‘Let me ask the Sangha for probation for an additional month for those two offenses.’ ",
   "pli-tv-kd13:25.2.13": "He asks ",
-  "pli-tv-kd13:25.2.14": "and the Sangha gives him probation for an additional month. ",
+  "pli-tv-kd13:25.2.14": "and gets it. ",
   "pli-tv-kd13:25.2.15": "Counting the previous month, that monk must stay on probation for two months. ",
   "pli-tv-kd13:25.2.16": "It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:25.2.17": "He remembers one month, but not the other. ",
   "pli-tv-kd13:25.2.18": "He asks the Sangha for one month probation for the month he remembers, ",
-  "pli-tv-kd13:25.2.19": "and the Sangha gives him that probation. ",
+  "pli-tv-kd13:25.2.19": "which he gets. ",
   "pli-tv-kd13:25.2.20": "While on probation, he remembers the other month. ",
   "pli-tv-kd13:25.2.21": "He considers all of this ",
   "pli-tv-kd13:25.2.27": "and thinks, ‘Let me ask the Sangha for probation for an additional month for those two offenses.’ ",
