--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1059,8 +1059,8 @@
   "pli-tv-kd13:25.2.20": "While on probation, he remembers the other month. ",
   "pli-tv-kd13:25.2.21": "He considers all of this ",
   "pli-tv-kd13:25.2.27": "and thinks, ‘Let me ask the Sangha for probation for an additional month for those two offenses.’ ",
-  "pli-tv-kd13:25.2.28": "He then asks the Sangha, ",
-  "pli-tv-kd13:25.2.29": "and the Sangha gives him probation for an additional month. ",
+  "pli-tv-kd13:25.2.28": "He asks ",
+  "pli-tv-kd13:25.2.29": "and gets it. ",
   "pli-tv-kd13:25.2.30": "Counting the previous month, that monk must stay on probation for two months. ",
   "pli-tv-kd13:25.2.31": "It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:25.2.32": "He’s sure of one month, but unsure of the other. ",
