Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1065,17 +1065,17 @@
   "pli-tv-kd13:25.2.31": "It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:25.2.32": "He’s sure of one month, but unsure of the other. ",
   "pli-tv-kd13:25.2.33": "He asks the Sangha for one month probation for the month he’s sure of, ",
-  "pli-tv-kd13:25.2.34": "and the Sangha gives him that probation. ",
+  "pli-tv-kd13:25.2.34": "which he gets. ",
   "pli-tv-kd13:25.2.35": "While on probation, he becomes sure of the other month. ",
   "pli-tv-kd13:25.2.36": "He considers all this ",
   "pli-tv-kd13:25.2.42": "and thinks, ‘Let me ask the Sangha for probation for an additional month for those two offenses.’ ",
-  "pli-tv-kd13:25.2.43": "He then asks the Sangha, ",
-  "pli-tv-kd13:25.2.44": "and the Sangha gives him probation for an additional month. ",
+  "pli-tv-kd13:25.2.43": "He asks ",
+  "pli-tv-kd13:25.2.44": "and gets it. ",
   "pli-tv-kd13:25.2.45": "Counting the previous month, that monk must stay on probation for two months. ",
   "pli-tv-kd13:25.3.1": "“It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
-  "pli-tv-kd13:25.3.2": "He knows he has concealed for one month, but doesn’t know he has concealed for the other. ",
+  "pli-tv-kd13:25.3.2": "He’s aware of having concealed for one month, but not for the other. ",
   "pli-tv-kd13:25.3.3": "He asks the Sangha for probation for two months for both offenses, ",
-  "pli-tv-kd13:25.3.4": "and the Sangha gives him that probation. ",
+  "pli-tv-kd13:25.3.4": "which he gets. ",
   "pli-tv-kd13:25.3.5": "While he’s on probation, another monk arrives. He’s learned, a master of the tradition; he’s an expert on the Teaching, the Monastic Law, and the Key Terms; he’s knowledgeable and competent, has sense of conscience, and is afraid of wrongdoing and fond of the training. ",
   "pli-tv-kd13:25.3.6": "He says, ",
   "pli-tv-kd13:25.3.7": "‘What has this monk committed? ",
