Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1084,11 +1084,11 @@
   "pli-tv-kd13:25.3.15": "and he says, ",
   "pli-tv-kd13:25.3.16": "‘The giving of probation for the month he’s aware of having concealed is legitimate, ",
   "pli-tv-kd13:25.3.17": "legal, and has effect. ",
-  "pli-tv-kd13:25.3.18": "The giving of probation for the month he doesn’t know he has concealed is illegitimate, ",
+  "pli-tv-kd13:25.3.18": "The giving of probation for the month he’s not aware of having concealed is illegitimate, ",
   "pli-tv-kd13:25.3.19": "illegal, and has no effect. ",
   "pli-tv-kd13:25.3.20": "For one month he only deserves the trial period.’ ",
   "pli-tv-kd13:25.3.21": "It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
-  "pli-tv-kd13:25.3.22": "He remembers he has concealed for one month, but doesn’t remember he has concealed for the other. ",
+  "pli-tv-kd13:25.3.22": "He remembers concealing for one month, but not for the other. ",
   "pli-tv-kd13:25.3.23": "He asks the Sangha for probation for two months for both offenses, ",
   "pli-tv-kd13:25.3.24": "and the Sangha gives him that probation. ",
   "pli-tv-kd13:25.3.25": "While he’s on probation, another monk arrives. He’s learned, a master of the tradition; he’s an expert on the Teaching, the Monastic Law, and the Key Terms; he’s knowledgeable and competent, has sense of conscience, and is afraid of wrongdoing and fond of the training. ",
