Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1090,14 +1090,14 @@
   "pli-tv-kd13:25.3.21": "It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
   "pli-tv-kd13:25.3.22": "He remembers concealing for one month, but not for the other. ",
   "pli-tv-kd13:25.3.23": "He asks the Sangha for probation for two months for both offenses, ",
-  "pli-tv-kd13:25.3.24": "and the Sangha gives him that probation. ",
+  "pli-tv-kd13:25.3.24": "which he gets. ",
   "pli-tv-kd13:25.3.25": "While he’s on probation, another monk arrives. He’s learned, a master of the tradition; he’s an expert on the Teaching, the Monastic Law, and the Key Terms; he’s knowledgeable and competent, has sense of conscience, and is afraid of wrongdoing and fond of the training. ",
   "pli-tv-kd13:25.3.26": "He says, ",
   "pli-tv-kd13:25.3.27": "‘What has this monk committed? ",
   "pli-tv-kd13:25.3.28": "Why is he on probation?’ ",
   "pli-tv-kd13:25.3.29": "They tell him everything, ",
   "pli-tv-kd13:25.3.35": "and he says, ",
-  "pli-tv-kd13:25.3.36": "‘The giving of probation for the month he remembers he has concealed is legitimate, ",
+  "pli-tv-kd13:25.3.36": "‘The giving of probation for the month he remembers concealing is legitimate, ",
   "pli-tv-kd13:25.3.37": "legal, and has effect. ",
   "pli-tv-kd13:25.3.38": "The giving of probation for the month he doesn’t remember he has concealed is illegitimate, ",
   "pli-tv-kd13:25.3.39": "illegal, and has no effect. ",
