Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1099,7 +1099,7 @@
   "pli-tv-kd13:25.3.35": "and he says, ",
   "pli-tv-kd13:25.3.36": "‘The giving of probation for the month he remembers concealing is legitimate, ",
   "pli-tv-kd13:25.3.37": "legal, and has effect. ",
-  "pli-tv-kd13:25.3.38": "The giving of probation for the month he doesn’t remember he has concealed is illegitimate, ",
+  "pli-tv-kd13:25.3.38": "The giving of probation for the month he doesn’t remember concealing is illegitimate, ",
   "pli-tv-kd13:25.3.39": "illegal, and has no effect. ",
   "pli-tv-kd13:25.3.40": "For one month he only deserves the trial period.’ ",
   "pli-tv-kd13:25.3.41": "It may be that a monk has committed two offenses entailing suspension, both concealed for two months. ",
