Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1152,7 +1152,7 @@
   "pli-tv-kd13:26.2.23": "he doesn’t remember the number of offenses or the number of days; ",
   "pli-tv-kd13:26.2.24": "he’s unsure of the number of offenses and the number of days. ",
   "pli-tv-kd13:26.2.25": "He’s asking the Sangha for purifying probation for those offenses. ",
-  "pli-tv-kd13:26.2.26": "The Sangha gives him a purifying probation for those offenses. ",
+  "pli-tv-kd13:26.2.26": "The Sangha gives him that purifying probation. ",
   "pli-tv-kd13:26.2.27": "Any monk who approves of giving him a purifying probation for those offenses should remain silent. ",
   "pli-tv-kd13:26.2.28": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd13:26.2.29": "For the second time I speak on this matter. … ",
