--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1160,10 +1160,10 @@
   "pli-tv-kd13:26.2.31": "The Sangha has given monk so-and-so a purifying probation for those offenses. ",
   "pli-tv-kd13:26.2.32": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd13:26.3.1": "“When should purifying probation be given? ",
-  "pli-tv-kd13:26.3.2": "Purifying probation should be given when: one doesn’t know the number of offenses, nor the number of days; ",
-  "pli-tv-kd13:26.3.3": "one doesn’t remember the number of offenses, nor the number of days; ",
-  "pli-tv-kd13:26.3.4": "one is unsure of the number of offenses and the number of days. ",
-  "pli-tv-kd13:26.3.6": "Purifying probation should be given when: one knows the number of offenses, but not the number of days; ",
+  "pli-tv-kd13:26.3.2": "It should be given: when one doesn’t know the number of offenses, nor the number of days; ",
+  "pli-tv-kd13:26.3.3": "when one doesn’t remember the number of offenses, nor the number of days; ",
+  "pli-tv-kd13:26.3.4": "when one is unsure of the number of offenses and the number of days. ",
+  "pli-tv-kd13:26.3.6": "It should be given: when one knows the number of offenses, but not the number of days; ",
   "pli-tv-kd13:26.3.7": "one remembers the number of offenses, but not the number of days; ",
   "pli-tv-kd13:26.3.8": "one is sure of the number of offenses, but not the number of days. ",
   "pli-tv-kd13:26.3.10": "Purifying probation should be given when: one knows some of the offenses but not others, and not the number of days; ",
