--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1167,8 +1167,8 @@
   "pli-tv-kd13:26.3.7": "when one remembers the number of offenses, but not the number of days; ",
   "pli-tv-kd13:26.3.8": "when one is sure of the number of offenses, but not the number of days. ",
   "pli-tv-kd13:26.3.10": "It should be given: when one knows some of the offenses but not others, and not the number of days; ",
-  "pli-tv-kd13:26.3.11": "one remembers some of the offenses but not others, and not the number of days; ",
-  "pli-tv-kd13:26.3.12": "one is sure of some of the offenses but not others, and not the number of days. ",
+  "pli-tv-kd13:26.3.11": "when one remembers some of the offenses but not others, and not the number of days; ",
+  "pli-tv-kd13:26.3.12": "when one is sure of some of the offenses but not others, and not the number of days. ",
   "pli-tv-kd13:26.3.14": "“Purifying probation should be given when: one doesn’t know the number of offenses, but one knows some of the days but not others; ",
   "pli-tv-kd13:26.3.15": "one doesn’t remember the number of offenses, but one remembers some of the days but not others; ",
   "pli-tv-kd13:26.3.16": "one is unsure of the number of offenses, but one is sure of some of the days but not others. ",
