Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1169,11 +1169,11 @@
   "pli-tv-kd13:26.3.10": "It should be given: when one knows some of the offenses but not others, and not the number of days; ",
   "pli-tv-kd13:26.3.11": "when one remembers some of the offenses but not others, and not the number of days; ",
   "pli-tv-kd13:26.3.12": "when one is sure of some of the offenses but not others, and not the number of days. ",
-  "pli-tv-kd13:26.3.14": "“Purifying probation should be given when: one doesn’t know the number of offenses, but one knows some of the days but not others; ",
-  "pli-tv-kd13:26.3.15": "one doesn’t remember the number of offenses, but one remembers some of the days but not others; ",
-  "pli-tv-kd13:26.3.16": "one is unsure of the number of offenses, but one is sure of some of the days but not others. ",
-  "pli-tv-kd13:26.3.18": "Purifying probation should be given when: one knows the number of offenses, and one knows some of the days but not others; ",
-  "pli-tv-kd13:26.3.19": "one remembers the number of offenses, and one remembers some of the days but not others; ",
+  "pli-tv-kd13:26.3.14": "It should be given: when one doesn’t know the number of offenses, but one knows some of the days but not others; ",
+  "pli-tv-kd13:26.3.15": "when one doesn’t remember the number of offenses, but one remembers some of the days but not others; ",
+  "pli-tv-kd13:26.3.16": "when one is unsure of the number of offenses, but one is sure of some of the days but not others. ",
+  "pli-tv-kd13:26.3.18": "It should be given: when one knows the number of offenses, and one knows some of the days but not others; ",
+  "pli-tv-kd13:26.3.19": "when one remembers the number of offenses, and one remembers some of the days but not others; ",
   "pli-tv-kd13:26.3.20": "one is sure of the number of offenses, and one is sure of some of the days but not others. ",
   "pli-tv-kd13:26.3.22": "Purifying probation should be given when: one knows some of the offenses but not others, ",
   "pli-tv-kd13:26.3.23": "and one knows some of the days but not others; ",
