Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1174,12 +1174,12 @@
   "pli-tv-kd13:26.3.16": "when one is unsure of the number of offenses, but one is sure of some of the days but not others. ",
   "pli-tv-kd13:26.3.18": "It should be given: when one knows the number of offenses, and one knows some of the days but not others; ",
   "pli-tv-kd13:26.3.19": "when one remembers the number of offenses, and one remembers some of the days but not others; ",
-  "pli-tv-kd13:26.3.20": "one is sure of the number of offenses, and one is sure of some of the days but not others. ",
-  "pli-tv-kd13:26.3.22": "Purifying probation should be given when: one knows some of the offenses but not others, ",
+  "pli-tv-kd13:26.3.20": "when one is sure of the number of offenses, and one is sure of some of the days but not others. ",
+  "pli-tv-kd13:26.3.22": "It should be given: when one knows some of the offenses but not others, ",
   "pli-tv-kd13:26.3.23": "and one knows some of the days but not others; ",
-  "pli-tv-kd13:26.3.24": "one remembers some of the offenses but not others, ",
+  "pli-tv-kd13:26.3.24": "when one remembers some of the offenses but not others, ",
   "pli-tv-kd13:26.3.25": "and one remembers some of the days but not others; ",
-  "pli-tv-kd13:26.3.26": "one is sure of some of the offenses but not others, ",
+  "pli-tv-kd13:26.3.26": "when one is sure of some of the offenses but not others, ",
   "pli-tv-kd13:26.3.27": "and one is sure of some of the days but not others. ",
   "pli-tv-kd13:26.4.1": "“When should probation be given? ",
   "pli-tv-kd13:26.4.2": "Probation should be given when: one knows the number of offenses and the number of days; ",
