Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1182,8 +1182,8 @@
   "pli-tv-kd13:26.3.26": "when one is sure of some of the offenses but not others, ",
   "pli-tv-kd13:26.3.27": "and one is sure of some of the days but not others. ",
   "pli-tv-kd13:26.4.1": "“When should probation be given? ",
-  "pli-tv-kd13:26.4.2": "Probation should be given when: one knows the number of offenses and the number of days; ",
-  "pli-tv-kd13:26.4.3": "one remembers the number of offenses and the number of days; ",
+  "pli-tv-kd13:26.4.2": "It should be given: when one knows the number of offenses and the number of days; ",
+  "pli-tv-kd13:26.4.3": "when one remembers the number of offenses and the number of days; ",
   "pli-tv-kd13:26.4.4": "one is sure of the number of offenses and the number of days. ",
   "pli-tv-kd13:26.4.6": "Probation should be given when: one doesn’t know the number of offenses, but one knows the number of days; ",
   "pli-tv-kd13:26.4.7": "one doesn’t remember the number of offenses, but one remembers the number of days; ",
