Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1188,9 +1188,9 @@
   "pli-tv-kd13:26.4.6": "It should be given: when one doesn’t know the number of offenses, but one knows the number of days; ",
   "pli-tv-kd13:26.4.7": "when one doesn’t remember the number of offenses, but one remembers the number of days; ",
   "pli-tv-kd13:26.4.8": "when one is unsure of the number of offenses, but sure of the number of days. ",
-  "pli-tv-kd13:26.4.10": "Probation should be given when: one knows some of the offenses but not others, and one knows the number of days; ",
-  "pli-tv-kd13:26.4.11": "one remembers some of the offenses but not others, and one remembers the number of days; ",
-  "pli-tv-kd13:26.4.12": "one is sure of some of the offenses but not others, and sure of the number of days.” ",
+  "pli-tv-kd13:26.4.10": "It should be given: when one knows some of the offenses but not others, and one knows the number of days; ",
+  "pli-tv-kd13:26.4.11": "when one remembers some of the offenses but not others, and one remembers the number of days; ",
+  "pli-tv-kd13:26.4.12": "when one is sure of some of the offenses but not others, and one is sure of the number of days.” ",
   "pli-tv-kd13:26.4.15": "The section of probation is finished. ",
   "pli-tv-kd13:27.1.0": "3. The group of forty ",
   "pli-tv-kd13:27.1.1": "At one time a monk on probation disrobed. ",
