Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1194,7 +1194,7 @@
   "pli-tv-kd13:26.4.15": "The section on probation is finished. ",
   "pli-tv-kd13:27.1.0": "3. The group of forty ",
   "pli-tv-kd13:27.1.1": "At one time a monk on probation disrobed. ",
-  "pli-tv-kd13:27.1.2": "He then came back and asked the monks for full ordination. ",
+  "pli-tv-kd13:27.1.2": "He then came back and asked the monks for the full ordination. ",
   "pli-tv-kd13:27.1.3": "They told the Buddha. ",
   "pli-tv-kd13:27.1.4": "“It may be that a monk on probation disrobes. ",
   "pli-tv-kd13:27.1.5": "For one who has disrobed, the probation is suspended. ",
