Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1196,8 +1196,8 @@
   "pli-tv-kd13:27.1.1": "At one time a monk on probation disrobed. ",
   "pli-tv-kd13:27.1.2": "He then came back and asked the monks for the full ordination. ",
   "pli-tv-kd13:27.1.3": "They told the Buddha. ",
-  "pli-tv-kd13:27.1.4": "“It may be that a monk on probation disrobes. ",
-  "pli-tv-kd13:27.1.5": "For one who has disrobed, the probation is suspended. ",
+  "pli-tv-kd13:27.1.4": "“It may be, monks, that a monk on probation disrobes. ",
+  "pli-tv-kd13:27.1.5": "For one who’s disrobed, the probation is suspended. ",
   "pli-tv-kd13:27.1.6": "If he’s given the full ordination again, he continues the previous probationary process right away. ",
   "pli-tv-kd13:27.1.7": "The probation that was given is valid. The probation he’s already undertaken is valid. The remainder is to be undertaken. ",
   "pli-tv-kd13:27.1.8": "It may be that a monk on probation becomes a novice monk. ",
