--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1261,7 +1261,7 @@
   "pli-tv-kd13:27.3.15": "The probation that was given is valid. The probation he’s undertaken is valid. ",
   "pli-tv-kd13:27.3.16": "That monk is to be given the trial period. ",
   "pli-tv-kd13:27.4.1": "“It may be that a monk undertaking the trial period of six days disrobes. ",
-  "pli-tv-kd13:27.4.2": "For one who has disrobed, the trial period is suspended. ",
+  "pli-tv-kd13:27.4.2": "For one who’s disrobed, the trial period is suspended. ",
   "pli-tv-kd13:27.4.3": "If he’s given the full ordination again, he continues the previous probationary process right away. ",
   "pli-tv-kd13:27.4.4": "The probation that was given is valid. The probation he’s undertaken is valid. ",
   "pli-tv-kd13:27.4.5": "The trial period that was given is valid. The trial period he’s already undertaken is valid. The remainder is to be undertaken. ",
@@ -1277,7 +1277,7 @@
   "pli-tv-kd13:27.4.15": "The probation that was given is valid. The probation he’s undertaken is valid. ",
   "pli-tv-kd13:27.4.16": "The trial period that was given is valid. The trial period he’s undertaken is valid. The remainder is to be undertaken. ",
   "pli-tv-kd13:27.5.1": "“It may be that a monk deserving rehabilitation disrobes. ",
-  "pli-tv-kd13:27.5.2": "For one who has disrobed, the rehabilitation is suspended. ",
+  "pli-tv-kd13:27.5.2": "For one who’s disrobed, the rehabilitation is suspended. ",
   "pli-tv-kd13:27.5.3": "If he’s given the full ordination again, he continues the previous probationary process right away. ",
   "pli-tv-kd13:27.5.4": "The probation that was given is valid. The probation he’s undertaken is valid. ",
   "pli-tv-kd13:27.5.5": "The trial period of six days that was given is valid. The trial period he’s undertaken is valid. ",
