Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1707,7 +1707,7 @@
   "pli-tv-kd13:35.1.0": "9. The group of nine on unpurified with sending back to the beginning ",
   "pli-tv-kd13:35.1.1": "“It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, both of the same sort and of various sorts. ",
   "pli-tv-kd13:35.1.2": "He asks the Sangha for simultaneous probation for those offenses, ",
-  "pli-tv-kd13:35.1.3": "and the Sangha gives him that probation. ",
+  "pli-tv-kd13:35.1.3": "which he gets. ",
   "pli-tv-kd13:35.1.4": "While on probation, he commits a number of offenses entailing suspension—specified and unconcealed. ",
   "pli-tv-kd13:35.1.5": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:35.1.6": "and it does. The legal procedure is legitimate, irreversible, and fit to stand. And the Sangha gives him simultaneous probation legitimately. ",
