--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1723,7 +1723,7 @@
   "pli-tv-kd13:35.1.16": "That monk isn’t purified from those offenses. ",
   "pli-tv-kd13:35.1.17": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, both of the same sort and of various sorts. ",
   "pli-tv-kd13:35.1.18": "He asks the Sangha for simultaneous probation for those offenses, ",
-  "pli-tv-kd13:35.1.19": "and the Sangha gives him that probation. ",
+  "pli-tv-kd13:35.1.19": "which he gets. ",
   "pli-tv-kd13:35.1.20": "While on probation, he commits a number of offenses entailing suspension—specified and both concealed and unconcealed. ",
   "pli-tv-kd13:35.1.21": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:35.1.22": "and it does. The legal procedure is legitimate, irreversible, and fit to stand. And the Sangha gives him simultaneous probation legitimately. It then gives him the trial period of six days illegitimately, and the rehabilitation illegitimately. ",
