Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1741,7 +1741,7 @@
   "pli-tv-kd13:35.2.11": "That monk isn’t purified from those offenses. ",
   "pli-tv-kd13:35.2.12": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, both of the same sort and of various sorts. ",
   "pli-tv-kd13:35.2.13": "He asks the Sangha for simultaneous probation for those offenses, ",
-  "pli-tv-kd13:35.2.14": "and the Sangha gives him that probation. ",
+  "pli-tv-kd13:35.2.14": "which he gets. ",
   "pli-tv-kd13:35.2.15": "While on probation, he commits a number of offenses entailing suspension—concealed and both specified and unspecified. ",
   "pli-tv-kd13:35.2.16": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:35.2.17": "and it does. The legal procedure is legitimate, irreversible, and fit to stand. And the Sangha gives him simultaneous probation legitimately. ",
