--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1770,7 +1770,7 @@
   "pli-tv-kd13:36.1.9": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
   "pli-tv-kd13:36.1.10": "both of the same sort and of various sorts. ",
   "pli-tv-kd13:36.1.11": "He asks the Sangha for simultaneous probation for those offenses, ",
-  "pli-tv-kd13:36.1.12": "and the Sangha gives him that probation. ",
+  "pli-tv-kd13:36.1.12": "which he gets. ",
   "pli-tv-kd13:36.1.13": "While on probation, he commits a number of offenses entailing suspension—specified and concealed. ",
   "pli-tv-kd13:36.1.14": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:36.1.15": "and it does. But the legal procedure is illegitimate, reversible, and unfit to stand. And the Sangha gives him simultaneous probation illegitimately. ",
