--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1779,7 +1779,7 @@
   "pli-tv-kd13:36.1.18": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
   "pli-tv-kd13:36.1.19": "both of the same sort and of various sorts. ",
   "pli-tv-kd13:36.1.20": "He asks the Sangha for simultaneous probation for those offenses, ",
-  "pli-tv-kd13:36.1.21": "and the Sangha gives him that probation. ",
+  "pli-tv-kd13:36.1.21": "which he gets. ",
   "pli-tv-kd13:36.1.22": "While on probation, he commits a number of offenses entailing suspension—specified and both concealed and unconcealed. ",
   "pli-tv-kd13:36.1.23": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:36.1.24": "and it does. But the legal procedure is illegitimate, reversible, and unfit to stand. And the Sangha gives him simultaneous probation illegitimately. ",
