--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1787,7 +1787,7 @@
   "pli-tv-kd13:36.1.26": "That monk isn’t purified from those offenses. ",
   "pli-tv-kd13:36.1.27": "“It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, both of the same sort and of various sorts. ",
   "pli-tv-kd13:36.1.28": "He asks the Sangha for simultaneous probation for those offenses, ",
-  "pli-tv-kd13:36.1.29": "and the Sangha gives him that probation. ",
+  "pli-tv-kd13:36.1.29": "which he gets. ",
   "pli-tv-kd13:36.1.30": "While on probation, he commits a number of offenses entailing suspension—unspecified and unconcealed … ",
   "pli-tv-kd13:36.1.31": "unspecified and concealed … ",
   "pli-tv-kd13:36.1.32": "unspecified and both concealed and unconcealed … ",
