Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1799,7 +1799,7 @@
   "pli-tv-kd13:36.1.38": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
   "pli-tv-kd13:36.1.39": "both of the same sort and of various sorts. ",
   "pli-tv-kd13:36.1.40": "He asks the Sangha for simultaneous probation for those offenses, ",
-  "pli-tv-kd13:36.1.41": "and the Sangha gives him that probation. ",
+  "pli-tv-kd13:36.1.41": "which he gets. ",
   "pli-tv-kd13:36.1.42": "While on probation, he commits a number of offenses entailing suspension—concealed and both specified and unspecified. ",
   "pli-tv-kd13:36.1.43": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:36.1.44": "and it does. But the legal procedure is illegitimate, reversible, and unfit to stand. And the Sangha gives him simultaneous probation illegitimately. It then gives him the trial period of six days legitimately, and the rehabilitation legitimately. ",
