--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1848,7 +1848,7 @@
   "pli-tv-kd13:36.2.50": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
   "pli-tv-kd13:36.2.51": "both of the same sort and of various sorts. ",
   "pli-tv-kd13:36.2.52": "He asks the Sangha for simultaneous probation for those offenses, ",
-  "pli-tv-kd13:36.2.53": "and the Sangha gives him that probation. ",
+  "pli-tv-kd13:36.2.53": "which he gets. ",
   "pli-tv-kd13:36.2.54": "While on probation, he commits a number of offenses entailing suspension—specified and both concealed and unconcealed. ",
   "pli-tv-kd13:36.2.55": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:36.2.56": "and it does. But the legal procedure is illegitimate, reversible, and unfit to stand. And the Sangha gives him simultaneous probation illegitimately. ",
