Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1862,7 +1862,7 @@
   "pli-tv-kd13:36.3.1": "“It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
   "pli-tv-kd13:36.3.2": "both of the same sort and of various sorts. ",
   "pli-tv-kd13:36.3.3": "He asks the Sangha for simultaneous probation for those offenses, ",
-  "pli-tv-kd13:36.3.4": "and the Sangha gives him that probation. ",
+  "pli-tv-kd13:36.3.4": "which he gets. ",
   "pli-tv-kd13:36.3.5": "While on probation, he commits a number of offenses entailing suspension—unspecified and unconcealed … ",
   "pli-tv-kd13:36.3.6": "unspecified and concealed … ",
   "pli-tv-kd13:36.3.7": "unspecified and both concealed and unconcealed … ",
