Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd13_translation-en-brahmali.json
@@ -1889,7 +1889,7 @@
   "pli-tv-kd13:36.4.24": "It may be that a monk has committed a number of offenses entailing suspension, both specified and unspecified, both of the same name and of various names, both of the same kind and of various kinds, ",
   "pli-tv-kd13:36.4.25": "both of the same sort and of various sorts. ",
   "pli-tv-kd13:36.4.26": "He asks the Sangha for simultaneous probation for those offenses, ",
-  "pli-tv-kd13:36.4.27": "and the Sangha gives him that probation. ",
+  "pli-tv-kd13:36.4.27": "which he gets. ",
   "pli-tv-kd13:36.4.28": "While on probation, he commits a number of offenses entailing suspension—both concealed and unconcealed and both specified and unspecified. ",
   "pli-tv-kd13:36.4.29": "He asks the Sangha to send him back to the beginning for those offenses, ",
   "pli-tv-kd13:36.4.30": "and it does. But the legal procedure is illegitimate, reversible, and unfit to stand. And the Sangha gives him simultaneous probation illegitimately. ",
