Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn3/sn3.25_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn3/sn3.25_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn3/sn3.25_translation-de-sabbamitta.json
@@ -9,7 +9,7 @@
   "sn3.25:2.1": "„Was denkst du, großer König? ",
   "sn3.25:2.2": "Angenommen, ein vertrauenswürdiger und zuverlässiger Mann käme von Osten. ",
   "sn3.25:2.3": "Er begäbe sich zu dir und sagte: ",
-  "sn3.25:2.4": "‚Bitte, großer König, das solltest du wissen: Ich komme von Osten. ",
+  "sn3.25:2.4": "‚Bitte, großer König, das sollst du wissen: Ich komme von Osten. ",
   "sn3.25:2.5": "Dort sah ich einen riesigen Berg, der bis zu den Wolken reichte. Er bewegte sich hierher und zermalmte dabei alle Geschöpfe. ",
   "sn3.25:2.6": "So tue also, großer König, was getan werden muss!‘ ",
   "sn3.25:2.7": "Dann käme ein zweiter vertrauenswürdiger und zuverlässiger Mann von Westen … ",
