--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -1,5 +1,6 @@
 {
   "sn22.84:0.1": "Verbundene Lehrreden 22.84 ",
   "sn22.84:0.2": "9. Das Kapitel mit Ordensältesten ",
-  "sn22.84:0.3": "Mit Tissa "
+  "sn22.84:0.3": "Mit Tissa ",
+  "sn22.84:1.1": "In Sāvatthī. "
 }
