--- a/translation/de/sabbamitta/sutta/an/an5/an5.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.56_translation-de-sabbamitta.json
@@ -16,7 +16,7 @@
   "an5.56:4.3": "Er verstand: „Wiedergeburt ist beendet; die spirituelle Reise ist abgeschlossen; was zu tun war, ist getan; es gibt keine Rückkehr mehr zu irgendeinem Daseinszustand.“ ",
   "an5.56:4.4": "Und jener Mönch wurde einer der Vollendeten. ",
   "an5.56:5.1": "Als er die Vollendung erlangt hatte, ging der Mönch zu seinem Mentor und sagte: ",
-  "an5.56:5.2": "„Nun, Herr, fühlt sich mein Körper nicht an wie betäubt. Ich bin nicht durcheinander, die Lehren fallen mir ein und mein Geist ist nicht dumpf und benommen. Ich bin mit dem geistlichen Leben zufrieden und zweifle nicht an den Lehren.“ ",
+  "an5.56:5.2": "„Nun, Herr, fühlt sich mein Körper nicht an wie betäubt. Ich weiß wieder, wo hinten und vorne ist, die Lehren fallen mir ein und mein Geist ist nicht dumpf und benommen. Ich bin mit dem geistlichen Leben zufrieden und zweifle nicht an den Lehren.“ ",
   "an5.56:5.3": "Da nahm dieser Mönch seinen Schüler mit zum Buddha, verbeugte sich, setzte sich zur Seite hin und sagte zum Buddha: ",
   "an5.56:5.4": "„Herr, dieser Mönch sagt: ",
   "an5.56:5.5": "‚Nun, Herr, fühlt sich mein Körper nicht an wie betäubt. Ich bin nicht durcheinander, die Lehren fallen mir ein und mein Geist ist nicht dumpf und benommen. Ich bin mit dem geistlichen Leben zufrieden und zweifle nicht an den Lehren.‘“ ",
