Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -4,5 +4,5 @@
   "sn22.84:0.3": "Mit Tissa ",
   "sn22.84:1.1": "In Sāvatthī. ",
   "sn22.84:1.2": "Zu dieser Zeit nun unterrichtete der Ehrwürdige Tissa, der Cousin des Buddha von väterlicher Seite, mehrere Mönche: ",
-  "sn22.84:1.3": "„Werte Freunde, mein Körper fühlt sich an wie betäubt. Ich bin durcheinander, die Lehren wollen mir nicht einfallen und mein Geist ist ganz dumpf und benommen. Ich bin mit dem geistlichen Leben unzufrieden und zweifle an den Lehren.“ "
+  "sn22.84:1.3": "„Werte Freunde, mein Körper fühlt sich an wie betäubt. Ich weiß nicht, wo hinten und vorne ist, die Lehren wollen mir nicht einfallen und mein Geist ist ganz dumpf und benommen. Ich bin mit dem geistlichen Leben unzufrieden und zweifle an den Lehren.“ "
 }
