Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn22.84:2.1": "Da gingen mehrere Mönche und Nonnen zum Buddha, verbeugten sich, setzten sich zur Seite hin und berichteten ihm davon. ",
   "sn22.84:3.1": "Da wandte sich der Buddha an einen gewissen Mönch: ",
   "sn22.84:3.2": "„Bitte, Mönch, sag dem Mönch Tissa in meinem Namen, dass der Lehrer ihn rufen lässt.“ ",
+  "sn22.84:3.3": "„Ja, Herr“, antwortete der Mönch. Er ging zu Tissa und sagte zu ihm: ",
   "sn22.84:3.5": "„Ja, werter Freund“, antwortete Tissa. Er ging zum Buddha, verbeugte sich und setzte sich zur Seite hin. Der Buddha sagte zu ihm: "
 }
