--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.84_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn22.84:3.3": "„Ja, Herr“, antwortete der Mönch. Er ging zu Tissa und sagte zu ihm: ",
   "sn22.84:3.4": "„Werter Tissa, der Lehrer lässt dich rufen.“ ",
   "sn22.84:3.5": "„Ja, werter Freund“, antwortete Tissa. Er ging zum Buddha, verbeugte sich und setzte sich zur Seite hin. Der Buddha sagte zu ihm: ",
-  "sn22.84:3.6": "„Ist es wirklich wahr, Tissa, dass du mehrere Mönche darüber unterrichtet hast, "
+  "sn22.84:3.6": "„Ist es wirklich wahr, Tissa, dass du mehrere Mönche darüber unterrichtet hast, ",
+  "sn22.84:3.7": "dass dein Körper sich anfühlt wie betäubt … "
 }
